oqct-app/main/default/objects/Data_Clean_App_Configurations__c/Data_Clean_App_Configurations__c.object-meta.xml
<CustomObject>
    <description>This object stores the default app configurations</description>
    <label>Data Clean App Configurations</label>
    <nameField>
        <displayFormat>DCA-{0}</displayFormat>
        <label>Data Clean App Configuration Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DC-App Configs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>