oqct-app/main/default/objects/Data_Clean_App_Configurations__c/fields/Admin_Team_Email_Id__c.field-meta.xml
<CustomField>
    <fullName>Admin_Team_Email_Id__c</fullName>
    <description>Email id for Admin Teams</description>
    <inlineHelpText>Email id for Admin Teams</inlineHelpText>
    <label>Admin Team Email Id</label>
    <type>Email</type>
</CustomField>