oqct-app/main/default/objects/Data_Clean_App_Configurations__c/fields/External_Department_Email_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Department_Email_Id__c</fullName>
    <description>Email department associated with any external department which is to be notified</description>
    <inlineHelpText>Email department associated with any external department which is to be notified</inlineHelpText>
    <label>External Department Email Id</label>
    <type>Email</type>
</CustomField>