oqct-app/main/default/objects/Data_Clean_App_Configurations__c/fields/Send_Global_Email_App_Notification__c.field-meta.xml
<CustomField>
    <fullName>Send_Global_Email_App_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, sends emails for every process to the email addresses associated with Data Clean App Configurations</description>
    <inlineHelpText>If true, sends emails for every process to the email addresses associated with Data Clean App Configurations</inlineHelpText>
    <label>Send Global Email App Notification</label>
    <type>Checkbox</type>
</CustomField>