oqct-app/main/default/objects/Data_Clean_App_Configurations__c/fields/Team_Notes__c.field-meta.xml
<CustomField>
    <fullName>Team_Notes__c</fullName>
    <description>Data Clean Team Notes</description>
    <label>Team Notes</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>