oqct-app/main/default/objects/Data_Clean_App_Configurations__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Team_Notes__c</columns>
    <columns>Send_Global_Email_App_Notification__c</columns>
    <columns>Admin_Team_Email_Id__c</columns>
    <columns>External_Department_Email_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>